--- a/src/components/Description/Description.module.css
+++ b/src/components/Description/Description.module.css
@@ -3,7 +3,7 @@
   padding: 0;
   font-family: 'Inter', sans-serif;
   font-size: 1.1rem;
-  color: #4a5568;
+  color: var(--text-secondary);
   line-height: 1.5;
 }
 
